# clippit-py

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
cli/: ClippitCli.csproj  Program.cs
scripts/: build_all.sh
src/clippit/: __init__.py  engine.py
