[project]
name = "clippit-py"
version = "0.1.0"
description = "Python wrapper for Clippit document comparison CLI with pre-built binaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Derek Johnston", email = "derek@wordsmith.ai" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clippit = ["bin/**/*"]
